network_policy_redis/frontend-policy.yaml
kind: NetworkPolicy
apiVersion: net.alpha.kubernetes.io/v1alpha1
metadata:
  namespace: demos
  name: frontend
spec:
  podSelector:
    demo: frontend
  ingress:
    - ports:
        - port: 80
          protocol: TCP
