network_policy_redis/redis-policy.yaml
kind: NetworkPolicy
apiVersion: net.alpha.kubernetes.io/v1alpha1
metadata:
  namespace: demos
  name: redis
spec:
  podSelector:
    demo: redis
  ingress:
    - from:
      - pods:
        demo: frontend
      ports:
        - protocol: TCP
          port: 6379
